--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@slidev/theme-apple-basic": "^0.25.1",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "slidev-component-poll": "^3.0.0",
     "slidev-theme-dracula": "^0.2.0",
+    "slidev-theme-excali-slide": "^1.3.0",
     "slidev-theme-light-icons": "^1.0.2",
     "slidev-theme-purplin": "^1.2.0",
     "vue": "^3.5.13"
